cmake_minimum_required(VERSION 3.10)
project(emu_black_display C)

# F端gen Sie Include-Verzeichnisse hinzu
include_directories(include)
include_directories(lib/Display/include)

# F端gen Sie Quellcode-Dateien hinzu
file(GLOB SOURCES "src/*.c" "src/can/*.c" "src/data/*.c" "lib/Display/src/*.c")

# Erstellen Sie das ausf端hrbare Programm
add_executable(emu_display ${SOURCES})

# Verkn端pfen Sie mit erforderlichen Bibliotheken
target_link_libraries(emu_display wiringPi pthread)
